# CMVA

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  run_cmva.sh
cmva/: __init__.py  __main__.py  analysis_types.py  app.py  config.py  events.py  logging_config.py  state.py  time_ranges.py
cmva/backtest/: benchmarks.py  costs.py  engine.py  live_paper.py  metrics.py
cmva/data/: candle.py  rest_client.py  storage.py  universe.py  validation.py  websocket_client.py
cmva/engine/: __init__.py  interval.py
cmva/features/: __init__.py  correlation.py  dispersion.py  pca.py  returns.py  rolling_beta.py  trend.py  volatility.py
cmva/forecast/: __init__.py  portfolio_vol.py  volatility_forecaster.py
cmva/models/: __init__.py  base.py  diagnostics.py  garch.py  lab.py  registry.py  selection.py
cmva/native/: __init__.py  backend.py  python_backend.py
cmva/policy/: __init__.py  base.py  regime_vol_target.py  vol_target.py
cmva/regime/: __init__.py  classifier.py  shock.py  thresholds.py
cmva/simulation/: __init__.py  repository.py  runner.py  schemas.py  scoring.py  snapshot.py  spec.py
cmva/tui/: app.py  bindings.py  graphs.py  screens.py  theme.py  widgets.py
cmva/validation/: __init__.py  walk_forward.py
cmva/web/: __init__.py  app.py  glossary.py  glossary.yaml
cmva/web/templates/: _macros.html  base.html  (+24 more)
src/: cmva_cpp.cpp
tests/: conftest.py  test_app_settings.py  test_app_settings_and_reports.py  test_backtest_engine.py  test_candle_validation.py  test_entrypoint.py  test_interval_conversion.py  test_model_garch.py  test_model_lab.py  test_native_backend.py  test_no_lookahead.py  test_policy_shift.py  test_regime_classifier.py  test_scope_removal.py  test_shock_classifier.py  test_simulation_repository_runner.py  test_simulation_spec_scoring.py  test_simulation_web.py  test_stat_ui_diagnostics.py  test_time_ranges_and_graphs.py  test_tooltip_glossary.py  test_walk_forward_validation.py  test_web_routes.py
(+6 files in other folders)
