[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmva"
version = "0.1.0"
description = "Crypto Market Volatility Analysis localhost market-state analytics dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "arch",
  "statsmodels",
  "scikit-learn",
  "textual",
  "rich",
  "httpx",
  "websockets",
  "pyarrow",
  "pydantic",
  "fastapi",
  "uvicorn",
  "jinja2",
  "pyyaml",
  "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cmva = "cmva.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
