[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "cmva"
version = "0.1.0"
description = "Crypto Market Volatility Analysis localhost market-state analytics dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "arch",
  "statsmodels",
  "scikit-learn",
  "httpx",
  "websockets",
  "pyarrow",
  "pydantic",
  "fastapi",
  "uvicorn",
  "jinja2",
  "pyyaml",
  "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cmva = "cmva.__main__:main"

[tool.scikit-build]
wheel.packages = ["cmva"]
cmake.version = ">=3.15"
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
